temp/np-kube-dns-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx-dns-egress
  namespace: ingress-nginx
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.96.0.10/32  # kube-dns service cluster IP
        - ipBlock:
            cidr: 10.96.0.10/32  # kube-dns service cluster IP
      ports:
        - protocol: UDP
          port: 53
